fixed table alignment and border buttons

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav{
 }
 
 .modify-btn , .trash-btn{
-    border: 2px solid #6c757d;
+    border: 1px solid #6c757d;
     color: #6c757d;
 }
 .modify-btn:after{
